@@ -7,7 +7,11 @@ Version 1.1.6
 - fixes to the way multiline entries are stored in .po file
 - i18n support in the app itself (finally!)
   (so far only Czech translation is available, translators welcome!)
-- an option to display .po file line numbers for catalog entries
+- added an option to display .po file line numbers for catalog entries
+- fixed crash when browsing certain source files
+- added ability to open refered source files directly in the editor of
+  choice instead of in built-in files viewer
+- fixed wrong placement of progress indicator in the status bar (Win32)
 
 
 Version 1.1.5
